--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zustand": "4.4.1"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^5.0.0",
